--- a/lms/backend/.env
+++ b/lms/backend/.env
@@ -1,2 +1,2 @@
 PORT=8585
-DB='mongodb+srv://premrathore654:prem123@cluster0.byukh.mongodb.net/library_management_system'
+DB='mongodb+srv://premrathore654:admin123@cluster0.urh1r.mongodb.net/library_management_system'
