--- a/lms/backend/package.json
+++ b/lms/backend/package.json
@@ -12,11 +12,14 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/nodemailer": "^6.4.16",
+    "@types/randomstring": "^1.3.0",
     "axios": "^1.7.7",
     "backend": "file:",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -27,7 +30,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "randomstring": "^1.3.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
